# openai-monkey

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: release.yml  tests.yml
examples/: bearer_app.py  minimal_app.py
src/openai_monkey/: __init__.py  adapter.py  cli.py  config.py
tests/: conftest.py  test_chat.py  test_cli_tools.py  test_config.py  test_documentation.py  test_integration_server.py  test_responses.py  test_smoke.py
