[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openai-monkey"
version = "2.1.0"
description = "A thin wrapper for easily monkeypatching openai-python"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name="Chris McComb", email="ccmcc2012@gmail.com"}]
dependencies = [
  "httpx>=0.24,<0.28",
  "openai==2.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["openai_basic*"]
