[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openai-monkey"
version = "0.1.0"
description = "A thin wrapper for easily monkeypatching openai-python"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name="Chris McComb", email="ccmcc2012@gmail.com"}]
dependencies = [
  "httpx>=0.24,<0.28",
  "openai==2.1.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "respx>=0.21",
]

[project.scripts]
"openai-monkey-ify" = "openai_monkey.cli:monkeyify_main"
"openai-monkey-install-openai" = "openai_monkey.cli:install_alias_main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["openai_monkey*"]

[tool.black]
line-length = 88
target-version = ["py39"]
include = "(src/openai_monkey|tests)/.*\\.pyi?$"

[tool.ruff]
line-length = 88
target-version = "py39"
src = ["src/openai_monkey", "tests"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "W",
  "I",
  "B",
  "UP",
  "SIM",
  "S",
  "A",
]
ignore = ["E203", "E501"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.9"
strict = true
files = ["src/openai_monkey", "tests"]
namespace_packages = true
mypy_path = ["src"]
